fix bgcolor gap at bottom

--- a/client/src/app/index.css
+++ b/client/src/app/index.css
@@ -1,5 +1,4 @@
 .App {
-    background-color: #282c34;
     color: white;
     font-size: calc(10px + 2vmin);
     min-height: 100vh;
